# game_protoype_work

./: README.md  docker-compose.yaml  pyproject.toml
llm_engineering/: settings.py
llm_engineering/configs/: data_etl_michael.yaml
llm_engineering/database/: __init__.py  base_mongo.py  base_mongo_odm.py  document_classes.py  mongo_connection.py
llm_engineering/model/: settings.py
llm_engineering/pages/: documents.py  types.py
llm_engineering/web_crawlers/: base.py  custom_article_crawler.py  dispatch_crawler.py  github_crawler.py
notebook_tests/: abstract_class.ipynb  typevar_examples.ipynb
tests/: abstract_class.ipynb  class_method.ipynb  document_retriever.py  embeddings_temp.py  mongo_checks.py  test_no_sql_base_document.py  typevar_examples.ipynb
