[project]
name = "llm-depends"
version = "0.1.0"
description = "packages required for LLM"
authors = [
    {name = "mboj"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "zenml (>=0.83.0,<0.84.0)",
    "pydantic (==2.11.1)",
    "pymongo (>=4.13.0,<5.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "selenium (>=4.33.0,<5.0.0)",
    "chromedriver-autoinstaller (>=0.6.4,<0.7.0)",
    "pytest (>=8.4.0,<9.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "langchain-community (>=0.3.24,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

